@@ -1,56 +1,39 @@
-plugins{
-    id "java"
+plugins {
+    id 'java'
 }
 
-group "com.github.sk7725"
+//todo nice way of fetching from CI/CD
+final buildFilename = "BetaMindy.jar"
 
-targetCompatibility = 8
+group 'com.github.sk7725'
 
+sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = ["src/"]
 sourceSets.main.resources.srcDirs = ["assets/"]
 
-repositories{
+repositories {
     mavenCentral()
-    maven{ url "https://jitpack.io"}
+    maven { url "https://jitpack.io" }
 }
 
-ext{
-    mindustryVersion = "v121"
-    modName = "BetaMindy"
+dependencies {
+    implementation 'com.github.Anuken.Mindustry:core:v115'
 }
 
-dependencies{
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+jar {
+    archiveName buildFilename
 }
 
-jar{
-    archiveFileName = "${modName}.jar"
-}
-
-task dexify doLast{
+task dexify doLast {
     exec{
         workingDir jar.archiveFile.get().asFile.parent
 
-        if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains("windows")) {
-            commandLine "cmd", "/c", "dx", "--dex", "--output=dexed-$buildFilename", "${modName}.jar"
-        }else{
-            commandLine "dx", "--dex", "--output=dexed-$buildFilename", "${modName}.jar"
+        if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+            commandLine "cmd", "/c", "dx", "--dex", "--output=dexed-$buildFilename", buildFilename
+        } else {
+            commandLine "dx", "--dex", "--output=dexed-$buildFilename", buildFilename
         }
     }
 }
 
 task buildDex dependsOn "build", "dexify"
-
-tasks.withType(JavaCompile){
-        targetCompatibility = 8
-        sourceCompatibility = 15
-        options.encoding("UTF-8")
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
-        }
-    }
